--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "gulp-uglify": "1.5.3",
     "gulp-useref": "3.0.8"
   },
-  "devDependencies": {
-
-  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
